set(PROJECT_LIB_NAME ${PROJECT_NAME_STR}_base_impl)

include_directories(${COMMON_INCLUDES})

set(SRC_FILES string_util.cc)
set(SRC_FILES ${SRC_FILES} string_piece.cc)
set(SRC_FILES ${SRC_FILES} logging.cc)
set(SRC_FILES ${SRC_FILES} debug_util.cc)

if (NOT WIN32)
    set(SRC_FILES ${SRC_FILES} string16.cc)
endif()

if(NOT WIN32)
file(GLOB SRC_FILES ${SRC_FILES} *posix.cc)
else()
file(GLOB SRC_FILES ${SRC_FILES} *win.cc)
endif()

if(NOT WIN32)
    set(EXT_LIBS rt)
else()
    set(EXT_LIBS kernel32)
    SET(EXT_LIBS ${EXT_LIBS} Userenv)
    SET(EXT_LIBS ${EXT_LIBS} wtsapi32)
    SET(EXT_LIBS ${EXT_LIBS} version)
    SET(EXT_LIBS ${EXT_LIBS} advapi32)
    SET(EXT_LIBS ${EXT_LIBS} psapi)
    SET(EXT_LIBS ${EXT_LIBS} user32)
    SET(EXT_LIBS ${EXT_LIBS} gdi32)
    SET(EXT_LIBS ${EXT_LIBS} winspool)
    SET(EXT_LIBS ${EXT_LIBS} comdlg32)
    SET(EXT_LIBS ${EXT_LIBS} shell32)
    SET(EXT_LIBS ${EXT_LIBS} ole32)
    SET(EXT_LIBS ${EXT_LIBS} oleaut32)
    SET(EXT_LIBS ${EXT_LIBS} uuid)
    SET(EXT_LIBS ${EXT_LIBS} odbc32)
    SET(EXT_LIBS ${EXT_LIBS} odbccp32)
endif()

if (WIN32)
    set(CMAKE_EXE_LINKER_FLAGS   /subsystem:windows)
    add_executable(debug_message debug_message.cc)
    target_link_libraries(debug_message ${EXT_LIBS})
endif()

add_library(${PROJECT_LIB_NAME} ${SRC_FILES})
target_link_libraries(${PROJECT_LIB_NAME} ${EXT_LIBS})

