cmake_minimum_required (VERSION 2.6)
project (gurl CXX)

include_directories(.)
include_directories(../)
include_directories(../testing/gtest/include)

if(WIN32)
    add_definitions(-DWIN32)
    include_directories(../third_party/icu/include)
else(WIN32)
    include_directories(../third_party/icu/public/common)
endif(WIN32)


set(SRC_FILES base/logging.cc)
if(NOT WIN32)
    set(SRC_FILES ${SRC_FILES} base/string16.cc)
endif(NOT WIN32)
set(SRC_FILES ${SRC_FILES} src/gurl.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_etc.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_fileurl.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_host.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_icu.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_internal.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_ip.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_mailtourl.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_path.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_pathurl.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_query.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_relative.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_stdurl.cc)
set(SRC_FILES ${SRC_FILES} src/url_parse.cc)
set(SRC_FILES ${SRC_FILES} src/url_parse_file.cc)
set(SRC_FILES ${SRC_FILES} src/url_util.cc)
#[[
set(SRC_FILES ${SRC_FILES} src/gurl_test_main.cc)
set(SRC_FILES ${SRC_FILES} src/gurl_unittest.cc)
set(SRC_FILES ${SRC_FILES} src/url_canon_unittest.cc)
set(SRC_FILES ${SRC_FILES} src/url_parse_unittest.cc)
set(SRC_FILES ${SRC_FILES} src/url_util_unittest.cc)
]]

add_library(gurl ${SRC_FILES})
